edit section overlaping corrected

--- a/service.css
+++ b/service.css
@@ -655,7 +655,7 @@ h1 {
 
   .photography {
     width: 100%;
-    height: 114vh;
+    height: 78vh;
     /* background-color: bisque; */
   }
   .editing {
